--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,7 +5,9 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-image: url(../src/assets/chat.gif);
+  background-repeat: no-repeat;
+  background-size: cover;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -14,42 +16,6 @@
   -webkit-text-size-adjust: 100%;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -66,4 +32,102 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+.App{
+  display: flex;
+  flex-direction: row;
+}
+.container-video {
+  border-radius: 10px;
+  margin: 5px;
+  padding: 10px;
+  width: 65%;
+  height: 1065px;
+  background-color: rgb(255, 255, 255, 0.3);
+  -webkit-backdrop-filter: blur(15px);
+  backdrop-filter: blur(15px);
+}
+.camRandomUser{
+  background-color: rgba(98, 98, 98);
+  border-radius: 10px;
+  height: 1000px;
+  position: relative;
+}
+.camUser{
+  background-color: rgb(157, 157, 157);
+  height: 20%;
+  width: 25%;
+  border-radius: 10px;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+.icon{
+  display: flex;
+  flex-direction: row;
+}
+.stopImage{
+  width: 25px;
+  margin: 5px;
+}
+.nextImage{
+  width: 25px;
+  margin: 5px;
+}
+.stop{
+  width: 100%;
+  text-align: end;
+  margin-top: 20px;
+}
+.next{
+  width: 100%;
+  text-align: end;
+  margin-top: 20px;
+}
+
+.container-chat{
+  border-radius: 10px;
+  margin: 5px;
+  padding: 10px;
+  width: 35%;
+  height: 1065px;
+  background-color: rgb(255, 255, 255, 0.3);
+  -webkit-backdrop-filter: blur(15px);
+  backdrop-filter: blur(15px);
+}
+.chatBubbleReceived{
+  width: 40%;
+  height: 4%; /* a mettre en fil-content */
+  background-color: gray;
+  border-radius: 10px;
+}
+.chatBubbleSend{
+  width: 40%;
+  height: 4%; /* a mettre en fil-content */
+  background-color: gray;
+  position: absolute;
+  right: 10px;
+  border-radius: 10px;
+}
+.sendInput{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  margin-bottom: 7px;
+  position: fixed;
+  bottom: 0;
+}
+.inputMessage{
+  border: none;
+  background-color: rgb(255, 255, 255, 0.6);
+  border-radius: 20px;
+  padding: 10px;
+  width: 57vh;
+}
+.sendIcon{
+  width: 25px;
+  position: absolute;
+  margin-top: 5px;
+  margin-left: 5px;
 }
