--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-image: url(../src/assets/chat.gif);
+  /* background-image: url(../src/assets/chat.gif); */
   background-repeat: no-repeat;
   background-size: cover;
 
@@ -51,6 +51,7 @@ button:focus-visible {
 .camRandomUser{
   background-color: rgba(98, 98, 98);
   border-radius: 10px;
+  overflow: hidden;
   height: 1000px;
   position: relative;
 }
@@ -59,6 +60,7 @@ button:focus-visible {
   height: 20%;
   width: 25%;
   border-radius: 10px;
+  overflow: hidden;
   position: absolute;
   top: 20px;
   right: 20px;
