--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -98,6 +98,17 @@ button:focus-visible {
   -webkit-backdrop-filter: blur(15px);
   backdrop-filter: blur(15px);
 }
+
+.container-only-chat{
+  border-radius: 10px;
+  padding: 10px;
+  width: 75%;
+  height: 1065px;
+  background-color: rgb(255, 255, 255, 0.3);
+  -webkit-backdrop-filter: blur(15px);
+  backdrop-filter: blur(15px);
+}
+
 .chatBubbleReceived{
   width: 40%;
   height: 4%; /* a mettre en fil-content */
@@ -137,7 +148,7 @@ button:focus-visible {
   display: flex;
   flex-direction: row;
   width: 100%;
-  margin-bottom: 7px;
+  margin-bottom: 12px;
   position: fixed;
   bottom: 0;
 }
