--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,11 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
   background-image: url(../src/assets/fond-accueil.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  
+
+
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -16,18 +15,29 @@
   -webkit-text-size-adjust: 100%;
 }
 
-.container{
+
+
+
+.container_blur {
+  background-color: rgb(255, 255, 255, 0.3);
+  border-radius: 20px;
+  -webkit-backdrop-filter: blur(15px);
+  backdrop-filter: blur(15px);
   position: absolute;
   top: 20px;
   bottom: 20px;
-  right: 20px;
   left: 20px;
-  background-color: rgb(255, 255, 255, 0.5);
-  -webkit-backdrop-filter: blur(15px);
-  backdrop-filter: blur(15px);
-  border-radius: 20px;
+  right: 20px;
 }
-h1{
+
+.omongole {
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  text-align: center;
+}
+
+h1 {
   font-size: 5em;
   line-height: 1.1;
   color: #c6e2ff;
@@ -39,56 +49,120 @@ h1{
           0 0 34px rgba(30,132,242,0.78),
           0 0 54px rgba(30,132,242,0.92);
 }
-.containerContainerTags{
-  margin-top: 250px;
-  height: fit-content;
 
-}
-.containerTags{
+.container_tag{
+  align-items: stretch;
+  text-align: center;
   display: flex;
   flex-direction: row;
-  margin-top: 150px;
 }
-.yourTags{
+
+input{
+  background: transparent;
+  border: #1a1a1a;
+  border-style: solid;
+  border-width: thin;
+  border-radius: 20px;
+  width: 50%;
+  padding: 1.5%;
+
+}
+
+.container_tags{
+  text-align: center;
   width: 100%;
 }
+
+.tags{
+  text-align: center;
+  border-radius: 8px;
+  border: 2px black solid;
+  padding: 3px;
+  margin-left: auto;
+  margin-right: auto;
+  width: fit-content;
+  min-height: 10%;
+}
+
+.button_reset_container {
+  border-radius: 8px;
+  border: 2px black solid;
+  font-size: 1em;
+  font-weight: bolder;
+  font-family: inherit;
+  background-color: transparent;
+  margin-top: 10%;
+
+}
+
+.button_reset{
+  font-weight: 500;
+  color: white;
+  text-decoration: inherit;
+  text-shadow:
+          0 0 6px rgba(202,228,225,0.92),
+          0 0 34px rgba(30,132,242,0.78),
+          0 0 54px rgba(30,132,242,0.92);
+}
+
 .separator{
   border: 1px black solid;
 }
-.tags{
+
+
+.container_enter_tag{
+  text-align: center;
   width: 100%;
-}
-.inputTag{
-  background-color: rgba(255, 255, 255, 0.5);
-  border: none;
-  border-radius: 10px;
-  height: 30px;
-  width: 350px;
 }
 
-.containerButtonChat{
-  display: flex;
-  flex-direction: row;
-  margin-top: 150px;
+.title{
+  text-align: center;
+  font-size: 1.5em;
+  font-weight: bold;
 }
-.chatVideo{
-  width: 100%;
+
+
+
+.container_button{
+  margin-left: auto;
+  margin-right: auto;
+  width: 60%;
+  text-align: center;
 }
-.chat{
-  width: 100%;
-}
-button{
-  background-color: rgba(255, 255, 255, 0.5);
-  border: none;
-  border-radius: 10px;
-  padding: 10px;
-  height: 50px;
-  width: 150px;
-  font-weight: 600;
-  font-size: large;
-}
-button:hover{
+
+
+.button_container {
+  border-radius: 8px;
+  border: 2px black solid;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: bolder;
+  font-family: inherit;
   background-color: transparent;
+  width: 25%;
+  margin-right: 10%;
+  margin-left: 10%;
+  margin-top: 10%;
+  background-image : url(../src/assets/jouer.svg);
+  background-repeat : no-repeat;
+  background-size: 20%;
+  background-position : 90% 50%;
+  vertical-align : middle;
+  text-align : left;
+
+}
+
+.button_text {
+  font-weight: 500;
+  color: white;
+  text-decoration: inherit;
+  text-shadow:
+          0 0 6px rgba(202,228,225,0.92),
+          0 0 34px rgba(30,132,242,0.78),
+          0 0 54px rgba(30,132,242,0.92);
+}
+
+button:hover {
   box-shadow:
           0 0 8px #fff,
           inset 0 0 8px #fff,
@@ -96,4 +170,5 @@ button:hover{
           inset 0 0 12px #ffc6f7,
           0 0 17px #ffc6f7,
           inset 0 0 17px #ffc6f7;
+  border: none;
 }
