--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,11 +3,10 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-image: url(../src/assets/chat.gif);
+  background-image: url(../src/assets/fond-accueil.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -16,157 +15,160 @@
   -webkit-text-size-adjust: 100%;
 }
 
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
 
-.App{
-  display: flex;
-  flex-direction: row;
-}
-.container-video {
-  border-radius: 10px;
-  margin: 5px;
-  padding: 10px;
-  width: 65%;
-  height: 1065px;
+
+.container_blur {
   background-color: rgb(255, 255, 255, 0.3);
+  border-radius: 20px;
   -webkit-backdrop-filter: blur(15px);
   backdrop-filter: blur(15px);
-}
-.camRandomUser{
-  background-color: rgba(98, 98, 98);
-  border-radius: 10px;
-  overflow: hidden;
-  height: 1000px;
-  position: relative;
-}
-.camUser{
-  background-color: rgb(157, 157, 157);
-  height: 20%;
-  width: 25%;
-  border-radius: 10px;
-  overflow: hidden;
   position: absolute;
   top: 20px;
+  bottom: 20px;
+  left: 20px;
   right: 20px;
 }
-.icon{
+
+.omongole {
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  text-align: center;
+}
+
+h1 {
+  font-size: 5em;
+  line-height: 1.1;
+  color: #c6e2ff;
+  text-shadow:
+          0 0 6px rgba(202,228,225,0.92),
+          0 0 30px rgba(202,228,225,0.34),
+          0 0 12px rgba(30,132,242,0.52),
+          0 0 21px rgba(30,132,242,0.92),
+          0 0 34px rgba(30,132,242,0.78),
+          0 0 54px rgba(30,132,242,0.92);
+}
+
+.container_tag{
+  align-items: stretch;
+  text-align: center;
   display: flex;
   flex-direction: row;
 }
-.stopImage{
-  width: 25px;
-  margin: 5px;
-}
-.nextImage{
-  width: 25px;
-  margin: 5px;
-}
-.stop{
-  width: 100%;
-  text-align: end;
-  margin-top: 20px;
-}
-.next{
-  width: 100%;
-  text-align: end;
-  margin-top: 20px;
-}
 
-.container-chat{
-  border-radius: 10px;
-  margin: 5px;
-  padding: 10px;
-  width: 35%;
-  height: 1065px;
-  background-color: rgb(255, 255, 255, 0.3);
-  -webkit-backdrop-filter: blur(15px);
-  backdrop-filter: blur(15px);
-}
-
-.container-only-chat{
-  border-radius: 10px;
-  padding: 10px;
-  width: 75%;
-  height: 1065px;
-  background-color: rgb(255, 255, 255, 0.3);
-  -webkit-backdrop-filter: blur(15px);
-  backdrop-filter: blur(15px);
-}
-
-.chatBubbleReceived{
-  width: 40%;
-  height: 4%; /* a mettre en fil-content */
-  padding: 10px;
-  background-color: gray;
-  border-radius: 10px;
-  margin-bottom: 0;
-  margin-top: 0;
-
-}
-.chatBubbleSend{
-  width: 40%;
-  height: 4%; /* a mettre en fil-content */
-  background-color: gray;
-  padding: 10px;
-  border-radius: 10px;
-  margin-bottom: 0;
-  margin-top: 0;
-}
-.messageTime {
-  color: rgb(227, 219, 219);
-}
-
-.messageSend {
-  display: flex;
-    flex-direction: column;
-    align-items: end;
-    word-wrap: break-word;
-
-}
-
-.messageReceived {
-  display: flex;
-    flex-direction: column;
-    align-items: start;
-    word-wrap: break-word;
-}
-
-.sendInput{
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  margin-bottom: 12px;
-  position: fixed;
-  bottom: 0;
-}
-.inputMessage{
-  border: none;
-  background-color: rgb(255, 255, 255, 0.6);
+input{
+  background: transparent;
+  border: #1a1a1a;
+  border-style: solid;
+  border-width: thin;
   border-radius: 20px;
-  padding: 10px;
-  width: 75%;
-  color: black;
-  font-weight: 900;
-  font-size: large;
+  width: 50%;
+  padding: 1.5%;
+
 }
-.sendIcon{
-  margin-left: 1%;
-  width: 17%;
+
+.container_tags{
+  text-align: center;
+  width: 100%;
+}
+
+.tags{
+  text-align: center;
+  border-radius: 8px;
+  border: 2px black solid;
+  padding: 3px;
+  margin-left: auto;
+  margin-right: auto;
+  width: fit-content;
+  min-height: 10%;
+}
+
+.button_reset_container {
+  border-radius: 8px;
+  border: 2px black solid;
+  font-size: 1em;
   font-weight: bolder;
+  font-family: inherit;
+  background-color: transparent;
+  margin-top: 10%;
+
+}
+
+.button_reset{
+  font-weight: 500;
+  color: white;
+  text-decoration: inherit;
+  text-shadow:
+          0 0 6px rgba(202,228,225,0.92),
+          0 0 34px rgba(30,132,242,0.78),
+          0 0 54px rgba(30,132,242,0.92);
+}
+
+.separator{
+  border: 1px black solid;
+}
+
+
+.container_enter_tag{
+  text-align: center;
+  width: 100%;
+}
+
+.title{
+  text-align: center;
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+
+
+.container_button{
+  margin-left: auto;
+  margin-right: auto;
+  width: 60%;
+  text-align: center;
+}
+
+
+.button_container {
+  border-radius: 8px;
+  border: 2px black solid;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: bolder;
+  font-family: inherit;
+  background-color: transparent;
+  width: 25%;
+  margin-right: 10%;
+  margin-left: 10%;
+  margin-top: 10%;
+  background-image : url(../src/assets/jouer.svg);
+  background-repeat : no-repeat;
+  background-size: 20%;
+  background-position : 90% 50%;
+  vertical-align : middle;
+  text-align : left;
+
+}
+
+.button_text {
+  font-weight: 500;
+  color: white;
+  text-decoration: inherit;
+  text-shadow:
+          0 0 6px rgba(202,228,225,0.92),
+          0 0 34px rgba(30,132,242,0.78),
+          0 0 54px rgba(30,132,242,0.92);
+}
+
+button:hover {
+  box-shadow:
+          0 0 8px #fff,
+          inset 0 0 8px #fff,
+          0 0 12px #ffc6f7,
+          inset 0 0 12px #ffc6f7,
+          0 0 17px #ffc6f7,
+          inset 0 0 17px #ffc6f7;
+  border: none;
 }
